XPLANBOX-2216 - reorganised xplan-validator, xplan-manager, xplan-dokumente